--- a/assignment_remainder_project/src/main/resources/application.properties
+++ b/assignment_remainder_project/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=9090
 spring.application.name=assignmentreminder
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/assignment_db
-spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.username=user_name
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -12,7 +12,7 @@ logging.level.org.springframework.security=DEBUG
 # Mail Configuration
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=venkatasaisrikanthreddyvenna@gmail.com
-spring.mail.password=hvsquazfzxkphmdj
+spring.mail.username=user1@gmail.com
+spring.mail.password=password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
